css color for copyButton:active

--- a/HelpSource/scdoc.css
+++ b/HelpSource/scdoc.css
@@ -791,6 +791,9 @@ div.met_subclasses a.seemore {
 .copyButton svg {
 	fill: lightgrey;
 }
+.copyButtonActive {
+	fill: black;
+}
 
 .copyIcon {
 	width: 20px;
