added number line to code mirror of help document
added number line to code mirror of help document

--- a/HelpSource/codemirror.css
+++ b/HelpSource/codemirror.css
@@ -14,23 +14,25 @@
   padding: 4px 0; /* Vertical padding around content */
 }
 .CodeMirror pre {
-  padding: 0 4px; /* Horizontal padding of content */
+  padding: 0 4px 0 2px; /* Horizontal padding of content */
 }
 
 .CodeMirror-scrollbar-filler, .CodeMirror-gutter-filler {
-  background-color: white; /* The little square between H and V scrollbars */
+  background-color: transparent/*white*/; /* The little square between H and V scrollbars */
 }
 
 /* GUTTER */
 
 .CodeMirror-gutters {
+  margin-left: -10px;
   border-right: 1px solid #ddd;
   background-color: #f7f7f7;
   white-space: nowrap;
 }
 .CodeMirror-linenumbers {}
 .CodeMirror-linenumber {
-  padding: 0 3px 0 5px;
+  margin-left: -10px;
+  padding: 0 3px 0 11px;
   min-width: 20px;
   text-align: right;
   color: #999;
