--- a/HelpSource/editor.css
+++ b/HelpSource/editor.css
@@ -4,7 +4,7 @@ textarea.editor {
 
 .CodeMirror {
     height: auto;
-    padding: 0 1em 0 0;
+    /* padding: 0 1em 0 0; */
     margin-top: 1em;
     border-left: 2px solid #e1e1e1;
     font-size: 1em;
