1. resolve the conflict between SC-cube and text in the SC help Home; 2. a typo correction in scdoc.css
- Resolve conflict between SC cube and text in SC Help Home
- a typo correction: remove an unnecessary */ on line 691.

--- a/HelpSource/scdoc.css
+++ b/HelpSource/scdoc.css
@@ -131,7 +131,7 @@ a.subclass_toggle:hover {
     background-image: url("images/SC_icon.png");
     background-repeat: no-repeat;
     background-position: 0.5em center;
-    background-size: 1.5em;
+    background-size: 1.1em;
 }
 
 a.menu-link {
@@ -688,7 +688,7 @@ table#search_settings {
     color: #555;
     width: 100%;
     margin-left: 0px;
-    margin-right: 0px;*/
+    margin-right: 0px;
     margin: 0px;
     padding: 0px;
     border-collapse: collapse;
