--- a/HelpSource/scdoc.css
+++ b/HelpSource/scdoc.css
@@ -552,6 +552,7 @@ table.arguments td.argumentname, td.argumentdesc {
 
 td.argumentname {
     font-weight: bold;
+    word-break: keep-all;
 }
 
 div.returnvalue {
