--- a/HelpSource/scdoc.css
+++ b/HelpSource/scdoc.css
@@ -902,7 +902,7 @@ div.met_subclasses a.seemore {
     /* background: ghostwhite; */
     font-family: /* D2Coding */ 'Noto Mono', monospace;
     font-size: 0.92em; /* 0.88em; */
-    /*line-height: 1.55em;*/ /* 1.65em; */
+    line-height: 1.4em /* 1.55em */ /* 1.65em */;
     /* width: auto; */
     /* padding: 0.3em 0.5em 0.2em; */
     /* page-break-inside: avoid; */
