--- a/HelpSource/editor.css
+++ b/HelpSource/editor.css
@@ -1,3 +1,21 @@
+:root {
+    --color-cm-background: white;
+    --color-cm-border: #e1e1e1;
+    --color-cm-selection: rgba(248, 162, 0, 0.5);
+    --color-cm-flash: rgba(248, 162, 0, 0);
+    --color-cm-keyword: #0000e6;
+    --color-cm-built-in: #3333bf;
+    --color-cm-number: #980099;
+    --color-cm-symbol: #007300;
+    --color-cm-class: #0000d2;
+    --color-cm-primitive: #0000d2;
+    --color-cm-char: #007300;
+    --color-cm-env-var: #8c4614;
+    --color-cm-comment: #bf0000;
+    --color-cm-string: #5f5f5f;
+    --color-cm-text: #000000;
+}
+
 textarea.editor {
     opacity: 0;
 }
@@ -6,9 +24,10 @@ textarea.editor {
     height: auto;
     padding: 0 1em;
     margin-top: 1em;
-    border-left: 2px solid #e1e1e1;
+    border-left: 2px solid var(--color-cm-border);
     font-size: 1em;
     line-height: normal;
+    background: var(--color-cm-background);
 }
 
 .CodeMirror-cursors,
@@ -20,21 +39,21 @@ textarea.editor {
 .CodeMirror-line::selection,
 .CodeMirror-line > span::selection,
 .CodeMirror-line > span > span::selection { 
-    background: rgba(248, 162, 0, 0.5) !important;
+    background: var(--color-cm-selection) !important;
 }
 
 @keyframes text-flash {
     0% { 
-        background: rgba(248, 162, 0, 0);
-        color: black;
+        background: var(--color-cm-flash);
+        color: var(--color-cm-text);
     }
     40% { 
-        background: rgba(248, 162, 0, 1); 
-        color: black,
+        background: var(--color-cm-flash); 
+        color: var(--color-cm-text);
     }
     100% { 
-        background: rgba(248, 162, 0, 0); 
-        color: black;
+        background: var(--color-cm-flash); 
+        color: var(--color-cm-text);
     }
 }
 
@@ -43,28 +62,30 @@ textarea.editor {
 }
 
 /* syntax hightlighting */
-.cm-s-default .cm-keyword { color: #0000e6; font-weight: bold; }
-.cm-s-default .cm-built-in { color: #3333bf; }
-.cm-s-default .cm-number { color: #980099; }
-.cm-s-default .cm-symbol { color: #007300; }
-.cm-s-default .cm-class { color: #0000d2; }
-.cm-s-default .cm-primitive { color: #0000d2; }
-.cm-s-default .cm-char { color: #007300; }
-.cm-s-default .cm-env-var { color: #8c4614; }
-.cm-s-default .cm-comment { color: #bf0000; }
-.cm-s-default .cm-string { color: #5f5f5f; }
-.cm-s-default .cm-text { color: #000000; }
+.cm-s-default .cm-keyword { color: var(--color-cm-keyword); font-weight: bold; }
+.cm-s-default .cm-built-in { color: var(--color-cm-built-in); }
+.cm-s-default .cm-number { color: var(--color-cm-number); }
+.cm-s-default .cm-symbol { color: var(--color-cm-symbol); }
+.cm-s-default .cm-class { color: var(--color-cm-class); }
+.cm-s-default .cm-primitive { color: var(--color-cm-primitive); }
+.cm-s-default .cm-char { color: var(--color-cm-char); }
+.cm-s-default .cm-env-var { color: var(--color-cm-env-var); }
+.cm-s-default .cm-comment { color: var(--color-cm-comment); }
+.cm-s-default .cm-string { color: var(--color-cm-string); }
+.cm-s-default .cm-text { color: var(--color-cm-text); }
 
 @media print {
-    .cm-s-default .cm-keyword { color: #0000e6; font-weight: bold; }
-    .cm-s-default .cm-built-in { color: #3333bf; font-weight: bold; }
-    .cm-s-default .cm-number { color: #980099; }
-    .cm-s-default .cm-symbol { color: #007300; }
-    .cm-s-default .cm-class { color: #0000d2; font-weight: bold; }
-    .cm-s-default .cm-primitive { color: #0000d2; }
-    .cm-s-default .cm-char { color: #007300; }
-    .cm-s-default .cm-env-var { color: #8c4614; }
-    .cm-s-default .cm-comment { color: #bf0000; font-style: italic; }
-    .cm-s-default .cm-string { color: #5f5f5f; }
-    .cm-s-default .cm-text { color: #000000; }
+    .cm-s-default .cm-keyword { color: var(--color-cm-keyword); font-weight: bold; }
+    .cm-s-default .cm-built-in { color: var(--color-cm-built-in); font-weight: bold; }
+    .cm-s-default .cm-number { color: var(--color-cm-number); }
+    .cm-s-default .cm-symbol { color: var(--color-cm-symbol); }
+    .cm-s-default .cm-class { color: var(--color-cm-class); font-weight: bold; }
+    .cm-s-default .cm-primitive { color: var(--color-cm-primitive); }
+    .cm-s-default .cm-char { color: var(--color-cm-char); }
+    .cm-s-default .cm-env-var { color: var(--color-cm-env-var); }
+    .cm-s-default .cm-comment { color: var(--color-cm-comment); font-style: italic; }
+    .cm-s-default .cm-string { color: var(--color-cm-string); }
+    .cm-s-default .cm-text { color: var(--color-cm-text); }
 }
+
+
