--- a/HelpSource/themes/default.css
+++ b/HelpSource/themes/default.css
@@ -23,7 +23,7 @@
     --sc-bg-color: var(--cm-background-color);
     /* normally each theme uses --cm-keyword-color, but this generates grey text
     on blue background, which is bad to read, therefore it gets manually adjusted here */
-    --sc-bg-warning: #aaa;
+    --sc-bg-warning: #f7f7d7;
 
     --sc-text-color: var(--cm-text-color);
     --sc-text-warning: var(--cm-keyword-color);
