--- a/HelpSource/scdoc.css
+++ b/HelpSource/scdoc.css
@@ -632,7 +632,7 @@ ul.tree li:last-child {
 }
 
 a.undoc {
-    color: var(--sc-text-color);
+    color: var(--sc-text-color-lighter);
     text-decoration: line-through;
 }
 
