--- a/HelpSource/scdoc.css
+++ b/HelpSource/scdoc.css
@@ -639,6 +639,7 @@ ul.tree li:last-child {
 a.undoc {
     color: var(--sc-text-color-lighter);
     text-decoration: line-through;
+    opacity: 50%;
 }
 
 /* from HelpSource/Search.html */
