--- a/HelpSource/browse.css
+++ b/HelpSource/browse.css
@@ -11,11 +11,11 @@
     border: none;
 }
 .result_doc {
-    border-bottom: 1px solid var(--sc-neutral);
+    border-bottom: 1px solid var(--color-fg-200);
     margin-top: 0.5em;
 }
 .result_summary {
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
     font-size: 9pt;
     max-width: 18em;
     margin-bottom: 0.6em;
@@ -25,45 +25,45 @@
     border-bottom: 1px solid transparent;
 }
 .cat_selected {
-    border-bottom: 1px solid var(--sc-neutral-lighter);
+    border-bottom: 1px solid var(--color-fg-100);
 }
 .cat_header {
-    border-bottom: 2px solid var(--sc-text-color);
-    color: var(--sc-neutral);
+    border-bottom: 2px solid var(--color-fg);
+    color: var(--color-fg-200);
     margin-bottom: 0.25em;
     padding: 2px;
 }
 .category a {
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
     font-weight: bold;
 }
 .cat_selected a {
-    color: var(--sc-text-color);
+    color: var(--color-fg);
     font-weight: bold;
 }
 .cat_arrow {
     float: right;
     padding-left: 1ex;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
 }
 
 #search_checks {
     font-size: 9pt;
-    color: var(--sc-neutral-darker);
-    border-bottom: 1px solid var(--sc-neutral);
+    color: var(--color-fg-300);
+    border-bottom: 1px solid var(--color-fg-200);
     margin-top: 1em;
     padding-bottom: 1em;
 }
 .cat_count {
-    color: var(--sc-neutral-lighter);
+    color: var(--color-fg-100);
     font-size: 9pt;
 }
 #total_count {
     font-size: 9pt;
-    color: var(--sc-neutral-lighter);;
+    color: var(--color-fg-100);;
 }
 .doc_kind {
-    color: var(--sc-neutral-lighter);;
+    color: var(--color-fg-100);;
     float: right;
     font-size: 8pt;
     padding: 0 2px;
