--- a/HelpSource/scdoc.css
+++ b/HelpSource/scdoc.css
@@ -1,8 +1,3 @@
-:root {
-    --color-input-fg: var(--sc-text-color);
-    --color-input-bg: var(--sc-neutral-darker);
- }
-
 *, *::before, *::after {
     box-sizing: inherit;
 }
@@ -18,8 +13,8 @@ html, body {
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 10pt;
-    color: var(--sc-text-color);
-    background: var(--sc-bg-color);
+    color: var(--color-fg);
+    background: var(--color-bg);
 }
 
 input, select, textarea {
@@ -39,7 +34,7 @@ table {
     margin-left: 2em;
 }
 table td {
-    border: 1px solid var(--sc-neutral);
+    border: 1px solid var(--color-fg-200);
     padding: 0.3em;
 }
 
@@ -54,7 +49,7 @@ p {
 
 a:link, a:visited, a:link:hover {
     text-decoration: none;
-    color: var(--sc-link-color);
+    color: var(--color-link);
 }
 
 a:link:hover {
@@ -67,12 +62,12 @@ a:link:hover {
 
 .inheritedmets_class {
     font-weight: bold;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
     margin-top: 0.5em;
     margin-bottom: 0.25em;
 }
 .inheritedmets_class a {
-    color: var(--sc-text-color-lighter);
+    color: var(--color-fg-400);
 }
 ul.inheritedmets {
     list-style: none;
@@ -86,14 +81,14 @@ ul.inheritedmets li {
 }
 a.inheritedmets_toggle {
     font-size: 9pt;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
     font-weight: normal;
 /*    margin-left: 2em;*/
 }
 
 a.inheritedmets_toggle:hover {
     text-decoration: none;
-    color: var(--sc-text-color);
+    color: var(--color-fg);
 }
 
 input {
@@ -101,13 +96,13 @@ input {
 }
 
 a.subclass_toggle {
-    color: var(--sc-neutral);
+    color: var(--color-fg-200);
     font-weight: normal;
 }
 
 a.subclass_toggle:hover {
     text-decoration: none;
-    color: var(--sc-text-color);
+    color: var(--color-fg);
 }
 
 
@@ -117,8 +112,8 @@ a.subclass_toggle:hover {
     width: 100%;
     height: 33px;
     padding: 0.5em 0;
-    background-color: var(--sc-bg-color);
-    box-shadow: 0em 0em 0.25em var(--sc-neutral);
+    background-color: var(--color-bg);
+    box-shadow: 0em 0em 0.25em var(--color-fg-200);
     z-index: 2;
 }
 
@@ -130,7 +125,7 @@ a.subclass_toggle:hover {
 #menubar .menuitem {
     padding: 0;
     margin: 0;
-    border-right: 1px solid var(--sc-neutral-lighter);
+    border-right: 1px solid var(--color-fg-100);
     font-size: 10pt;
     display: inline-block;
 }
@@ -145,7 +140,7 @@ a.subclass_toggle:hover {
 }
 
 a.menu-link {
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
     padding: 0 0.75em 0 0.75em;
     /* This ensures that the logo isn't cut off. */
     min-height: 1.5em;
@@ -154,7 +149,7 @@ a.menu-link {
 }
 a.menu-link:hover {
     text-decoration: none;
-    color: var(--sc-neutral);
+    color: var(--color-fg-200);
 }
 
 #menubar .menuitem .home a {
@@ -203,7 +198,7 @@ a.menu-link:hover {
 
 #topdoctitle {
     font-style: italic;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
     cursor: pointer;
 }
 
@@ -212,8 +207,8 @@ a.menu-link:hover {
     top: 33px;
     padding: 0.5em;
     display: none;
-    background-color: var(--sc-bg-color);
-    border: thin solid var(--sc-neutral-lighter);
+    background-color: var(--color-bg);
+    border: thin solid var(--color-fg-100);
 }
 
 .submenu a {
@@ -226,18 +221,18 @@ a.menu-link:hover {
         white-space: nowrap;
         text-align: left;
 /*      text-decoration: none;*/
-        color: var(--sc-text-color-lighter);
+        color: var(--color-fg-400);
         font-weight: bold;
 }
 
 .toc_search {
     margin-left: 10px;
-    color: var(--sc-neutral);
+    color: var(--color-fg-200);
     font-size: 9pt;
 }
 
 .toc_search input {
-    border: 1px solid var(--sc-neutral-lighter);
+    border: 1px solid var(--color-fg-100);
 }
 
 
@@ -246,7 +241,7 @@ a.menu-link:hover {
 }
 
 #label {
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
     font-size: 0.9em;
 }
 
@@ -254,7 +249,7 @@ a.menu-link:hover {
     font-weight: normal;
     font-size: 1.1em;
     font-style: italic;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
 }
 #related {
     font-weight: bold;
@@ -270,7 +265,7 @@ a.menu-link:hover {
 
 #superclasses {
     font-size: 9pt;
-    color: var(--sc-text-color-lighter);
+    color: var(--color-fg-400);
     font-weight: normal;
 }
 
@@ -278,8 +273,8 @@ a.menu-link:hover {
     float: right;
     font-size: 12pt;
     padding: 0.4em 0.4em 0.2em 0.4em;
-    background-color: var(--sc-bg-warning);
-    color: var(--sc-text-color);
+    background-color: var(--color-extensions-bg);
+    color: var(--color-extensions-fg);
     border-radius: 3px;
     border-bottom: 2px solid #000;
 }
@@ -295,14 +290,14 @@ a.menu-link:hover {
 
 .subheader {
     font-size: 9pt;
-    color: var(--sc-text-color-lighter);
+    color: var(--color-fg-400);
     margin-top: 1em;
 }
 
 .jump {
     text-align: right;
     font-size: 9pt;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
 }
 .jump a {
     font-weight: bold;
@@ -315,7 +310,7 @@ a.footnote {
     top: -0.1em;
 }
 div.footnotes {
-    border-top: 1px solid var(--sc-neutral);
+    border-top: 1px solid var(--color-fg-200);
     margin-left: 2em;
     margin-top: 3em;
     margin-right: 2em;
@@ -327,7 +322,7 @@ div.footnote {
 }
 
 .soft {
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
 }
 
 h1 {
@@ -337,7 +332,7 @@ h1 {
 }
 
 h2 {
-    border-bottom: 1px solid var(--sc-neutral-lighter);
+    border-bottom: 1px solid var(--color-fg-100);
     margin-top: 1.0em;
     text-align: left;
     margin-bottom: 2px;
@@ -355,7 +350,7 @@ h4 {
     margin-top: 1em;
     margin-bottom: 0em;
     margin-left: 0em;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
 }
 
 h1,
@@ -397,7 +392,7 @@ code, pre {
 }
 
 pre {
-    border-left: 2px solid var(--sc-neutral);
+    border-left: 2px solid var(--color-fg-200);
     padding-left: 1em;
 }
 
@@ -414,7 +409,7 @@ pre {
 
 .methprefix {
     font-weight: normal;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
     padding-right: 0.5em;
     margin-left: -1em;
 }
@@ -432,7 +427,7 @@ pre {
 }
 
 a.method-name {
-    color: var(--sc-text-color);
+    color: var(--color-fg);
     font-weight: bold;
 }
 
@@ -447,13 +442,13 @@ a.method-name {
 
 .extmethod {
     font-size: 9pt;
-    color: var(--sc-text-color-lighter);
+    color: var(--color-fg-400);
     padding-left: 0.2em;
 }
 
 .supmethod {
     font-size: 9pt;
-    color: var(--sc-text-color-lighter);
+    color: var(--color-fg-400);
     padding-left: 0.2em;
 }
 
@@ -485,7 +480,7 @@ td p {
 
 .note, .warning {
 /*    border-left: 4px solid #eea;*/
-    background: var(--sc-bg-warning);
+    background: var(--color-warning-bg);
     padding: 0.5em;
     margin-top: 1em;
     margin-bottom: 1em;
@@ -494,7 +489,7 @@ td p {
     font-weight: bold;
 }
 .warninglabel {
-    color: var(--sc-text-warning);
+    color: var(--color-warning-fg);
 }
 
 /*.version {
@@ -507,14 +502,14 @@ td p {
 
 .doclink {
     font-size: 9pt;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
     text-align: right;
     margin-top: 2em;
     margin-bottom: 2em;
-    border-top: 1px solid var(--sc-neutral-lighter);
+    border-top: 1px solid var(--color-fg-100);
 }
 .doclink a {
-    color: var(--sc-text-color-lighter);
+    color: var(--color-fg-400);
     word-wrap: break-word;
 }
 
@@ -529,12 +524,12 @@ td p {
     overflow: auto;
 /*    background: #eee;*/
     background: #fff;
-    border-right: 1px solid var(--sc-neutral-lighter);
+    border-right: 1px solid var(--color-fg-100);
 }
 
 #sidetoc a:hover {
     text-decoration: none;
-    color: var(--sc-bg-color);
+    color: var(--color-bg);
 }
 
 #toc-container {
@@ -554,7 +549,7 @@ td p {
     font-weight: bold;
     font-size: 120%;
     margin: 0.7em 0.5em;
-    color: var(--sc-text-color-lighter);
+    color: var(--color-fg-400);
 }
 
 li {
@@ -580,20 +575,20 @@ ul.toc li a {
 }
 
 ul.toc li a:hover {
-    background: var(--sc-neutral-lighter);
+    background: var(--color-fg-100);
 }
 
 .toc1 {
     font-weight: bold;
 }
 .toc1 a {
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
 }
 .toc2 {
     font-weight: normal;
 }
 .toc2 a {
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
 }
 .toc3 {
     font-family: monospace;
@@ -601,7 +596,7 @@ ul.toc li a:hover {
 /*    font-size: 9.5pt;*/
 }
 .toc3 a {
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
 }
 
 ul.tree, ul.tree ul {
@@ -626,12 +621,12 @@ ul.tree li {
 }
 
 ul.tree li:last-child {
- background: var(--sc-bg-color) url(images/lastnode.png) no-repeat;
+ background: var(--color-bg) url(images/lastnode.png) no-repeat;
 }
 
 /* is this still used? */
 :target {
-    border-bottom: 6px solid var(--sc-bg-warning);
+    border-bottom: 6px solid var(--color-warning-bg);
     padding-top:20px;
     margin-top:-20px;
 }
@@ -649,16 +644,16 @@ div#search_box {
 }
 
 #search_input {
-    border: 1px solid var(--sc-neutral);
+    border: 1px solid var(--color-fg-200);
     margin-left: 0.5em;
 }
 div#search_count {
-    border-bottom: 2px solid var(--sc-neutral);
-    color: var(--sc-text-color-lighter);
+    border-bottom: 2px solid var(--color-fg-200);
+    color: var(--color-fg-400);
 }
 
 div.result_category {
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
     margin-top: 1em;
     margin-bottom: 0.5em;
 /*    font-size: 9.5pt;
@@ -672,35 +667,35 @@ div.met_docs {
 }
 div.met_subclasses {
     font-size: 9pt;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
     margin-left: 3em;
     text-align: left;
 }
 div.met_subclasses a {
-    color: var(--sc-text-color-lighter);
+    color: var(--color-fg-400);
 }
 div.met_subclasses a.seemore {
     margin-left: 0.2em;
-    color: var(--sc-text-color-lighter);
+    color: var(--color-fg-400);
 }
 #search_checks {
     padding: 0.5em;
     padding-top: 0.25em;
     padding-bottom: 0.25em;
     font-size: 9pt;
-    color: var(--sc-neutral-darker);
-    background: var(--sc-neutral-lighter);
+    color: var(--color-fg-300);
+    background: var(--color-fg-100);
 }
 #search_checks0 {
     font-size: 9pt;
-    color: var(--sc-neutral-darker);
-    border-bottom: 1px solid var(--sc-neutral-lighter);
+    color: var(--color-fg-300);
+    border-bottom: 1px solid var(--color-fg-100);
     margin-top: 1em;
     padding-bottom: 1em;
 }
 table#search_settings {
     font-size: 9pt;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
     width: 100%;
     margin-left: 0px;
     margin-right: 0px;
@@ -719,7 +714,7 @@ table#search_settings {
 #js_error {
     font-family: Andale Mono, monospace;
     font-size: 9pt;
-    color: var(--sc-text-warning);
+    color: var(--color-warning-fg);
 }
 
 /* from Methods.html in HelpSource/Overview/ */
@@ -734,17 +729,17 @@ table#search_settings {
 }
 div.met_subclasses {
     font-size: 9pt;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
     margin-left: 3em;
     text-align: left;
 }
 div.met_subclasses a {
-    color: var(--sc-text-color-lighter);
+    color: var(--color-fg-400);
 }
 
 div.met_subclasses a.seemore {
     margin-left: 0.2em;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
 }
 
 .method_name {
@@ -753,17 +748,17 @@ div.met_subclasses a.seemore {
 }
 #method_note {
     font-size: 9pt;
-    color: var(--sc-neutral);
+    color: var(--color-fg-200);
     border-top: 1px solid #ddd;
     text-align: center;
     margin-top: 2em;
 }
 #total_count {
     font-size: 9pt;
-    color: var(--sc-neutral-darker);
+    color: var(--color-fg-300);
 }
 .searchlink {
-    background: var(--sc-bg-color);
+    background: var(--color-bg);
     text-align: center;
     font-size: 9pt;
     padding: 0.25em;
@@ -780,9 +775,9 @@ div.met_subclasses a.seemore {
 }
 #total_count {
     font-size: 9pt;
-    color: var(--sc-neutral);
+    color: var(--color-fg-200);
 }
 
 .subheader {
-    color: var(--sc-text-color);
+    color: var(--color-fg);
 }
