--- a/HelpSource/themes/classic.css
+++ b/HelpSource/themes/classic.css
@@ -1,34 +1,41 @@
 :root {
     /* editor colors */
-    --cm-border-color: #e1e1e1;
-    --cm-background-color: #fff;
-    --cm-selection-color: #308cc6;
-    --cm-keyword-color: #0000e6;
-    --cm-built-in-color: #3333bf;
-    --cm-number-color: #980099;
-    --cm-symbol-color: #007300;
-    --cm-class-color: #0000d2;
-    --cm-primitive-color: #3333bf;
-    --cm-char-color: #007300;
-    --cm-env-var-color: #8c4614;
-    --cm-comment-color: #bf0000;
-    --cm-string-color: #5f5f5f;
-    --cm-text-color: #000;
+    --color-cm-border: #e1e1e1;
+    --color-cm-background: #fff;
+    --color-cm-selection: #308cc6;
+    --color-cm-keyword: #0000e6;
+    --color-cm-built-in: #3333bf;
+    --color-cm-number: #980099;
+    --color-cm-symbol: #007300;
+    --color-cm-class: #0000d2;
+    --color-cm-primitive: #3333bf;
+    --color-cm-char: #007300;
+    --color-cm-env-var: #8c4614;
+    --color-cm-comment: #bf0000;
+    --color-cm-string: #5f5f5f;
+    --color-cm-text: #000;
 
     /* derived colors
     in future use `color-mix` to calculate them which allows for fewer variables
     but currently the qt browser does not support it, see
     https://developer.mozilla.org/en-US/docs/Web/CSS/color_value/color-mix
     */
-    --sc-bg-color: var(--cm-background-color);
-    --sc-bg-warning: var(--cm-selection-color);
+    --color-bg: var(--color-cm-background);
 
-    --sc-text-color: var(--cm-text-color);
-    --sc-text-warning: var(--cm-keyword-color);
-    --sc-text-color-lighter: #333;
+    --color-warning-bg: var(--color-cm-selection);
+    --color-warning-fg: var(--color-cm-keyword);
 
-    --sc-neutral: #aaa;
-    --sc-neutral-darker: #555;
-    --sc-neutral-lighter: #ccc;
-    --sc-link-color: var(--cm-string-color);
+    --color-fg: var(--color-cm-text);
+    --color-fg-400: #333;
+    --color-fg-300: #555;
+    --color-fg-200: #aaa;
+    --color-fg-100: #ccc;
+    
+    --color-link: var(--color-cm-string);
+
+    --color-extensions-bg: var(--color-cm-number);
+    --color-extensions-fg: var(--color-cm-background);
+
+    --color-input-fg: var(--color-fg);
+    --color-input-bg: var(--color-fg-300);
 }
