--- a/HelpSource/themes/dracula.css
+++ b/HelpSource/themes/dracula.css
@@ -1,34 +1,41 @@
 :root {
     /* editor colors */
-    --cm-background-color: #282a36;
-    --cm-border-color: #e1e1e1;
-    --cm-selection-color: #e0eeff;
-    --cm-keyword-color: #ff76c7;
-    --cm-built-in-color: #e2e37a;
-    --cm-number-color: #be90fc;
-    --cm-symbol-color: #45fc75;
-    --cm-class-color: #65e5ff;
-    --cm-primitive-color: #aaff7f;
-    --cm-char-color: #ff55ff;
-    --cm-env-var-color: #ffb965;
-    --cm-comment-color: #5df884;
-    --cm-string-color: #5df884;
-    --cm-text-color: #f7fdff;
+    --color-cm-background: #282a36;
+    --color-cm-border: #e1e1e1;
+    --color-cm-selection: #e0eeff;
+    --color-cm-keyword: #ff76c7;
+    --color-cm-built-in: #e2e37a;
+    --color-cm-number: #be90fc;
+    --color-cm-symbol: #45fc75;
+    --color-cm-class: #65e5ff;
+    --color-cm-primitive: #aaff7f;
+    --color-cm-char: #ff55ff;
+    --color-cm-env-var: #ffb965;
+    --color-cm-comment: #5df884;
+    --color-cm-string: #5df884;
+    --color-cm-text: #f7fdff;
 
     /* derived colors
     in future use `color-mix` to calculate them which allows for fewer variables
     but currently the qt browser does not support it, see
     https://developer.mozilla.org/en-US/docs/Web/CSS/color_value/color-mix
     */
-    --sc-bg-color: var(--cm-background-color);
-    --sc-bg-warning: #555;
+    --color-bg: var(--color-cm-background);
 
-    --sc-text-color: var(--cm-text-color);
-    --sc-text-warning: var(--cm-keyword-color);
-    --sc-text-color-lighter: #ccc;
+    --color-warning-bg: #555;
+    --color-warning-fg: var(--color-cm-keyword);
 
-    --sc-neutral: #aaa;
-    --sc-neutral-darker: #ccc;
-    --sc-neutral-lighter: #555;
-    --sc-link-color: var(--cm-string-color);
+    --color-fg: var(--color-cm-text);
+    --color-fg-400: #ccc;
+    --color-fg-300: #ccc;
+    --color-fg-200: #aaa;
+    --color-fg-100: #555;
+    
+    --color-link: var(--color-cm-string);
+
+    --color-extensions-bg: var(--color-cm-char);
+    --color-extensions-fg: var(--color-cm-background);
+
+    --color-input-fg: var(--color-fg);
+    --color-input-bg: var(--color-fg-300);
 }
